[package]
name = "kvdb"
version = "0.1.0"
authors = ["aniki-16x16 <aniki_16x16@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"